--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Three Column Portfolio Template for Bootstrap 3</title>
+    <title>SEEDGuard</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS for the '3 Col Portfolio' Template -->
     <link href="css/3-col-portfolio.css" rel="stylesheet">
+
+    <!-- customized CSS -->
+    <link href="css/seedguard.css" rel="stylesheet">
   </head>
 
   <body>
@@ -54,20 +57,23 @@
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
-          <h3><a href="#project-link">SEEDSecurity</a></h3>
+          <h3><a href="#project-link">SEEDProtector</a></h3>
           <p>Attack and defense software engineering data.</p>
+          <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedqa.png"></a>
-          <h3><a href="#project-link">SEEDQA</a></h3>
+          <h3><a href="#project-link">SEEDInspector</a></h3>
           <p>Quality assessment for software engineering data.</p>
+          <a href="https://github.com/SEEDGuard/SEEDInspector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedaugment.png"></a>
           <h3><a href="#project-link">SEEDAugmentor</a></h3>
           <p>Augmenting software engineering data.</p>
+          <a href="https://github.com/SEEDGuard/SEEDAugmentor"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
       </div>
