--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">SEEDGuard <small>Trustworthy Software Engineering Data Processing Library</small></h1>
+          <h1 class="page-header">SEEDGuard <small>High-quality Data Provider for Trustworthy AI for SE</small></h1>
         </div>
 
       </div>
