--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SEEDGuard</title>
+    <title>SEEDGuard.AI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -29,14 +29,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">SeedGuard</a>
+          <a class="navbar-brand" href="">SEEDGuard.AI</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about">About</a></li>
-            <!-- <li><a href="#services">Services</a></li> -->
+            <li><a href="https://github.com/SEEDGuard/seedguard.github.io/blob/main/README.md">How to Contribute</a></li>
+            <li><a href="">R&D Team</a></li>
+            <li><a href="">Contributor List</a></li>
+            <li><a href="https://join.slack.com/t/seedguard/signup">Join us (Slack)</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
