--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
             <li><a href="https://github.com/SEEDGuard/seedguard.github.io/blob/main/README.md">How to Contribute</a></li>
             <li><a href="">R&D Team</a></li>
             <li><a href="">Contributor List</a></li>
@@ -51,7 +50,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">SEEDGuard <small>High-quality Data Provider for Trustworthy AI for SE</small></h1>
+          <h1 class="page-header">SEEDGuard.AI <small>High-quality Data Provider for Trustworthy AI for SE</small></h1>
         </div>
 
       </div>
