--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
           <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
           <h3><a href="#project-link">SEEDProtector</a></h3>
           <p>Attack and defense software engineering data.</p>
-          <a href="https://seedguard.github.io/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <a href="SEEDProtector.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedqa.png"></a>
           <h3><a href="#project-link">SEEDInspector</a></h3>
           <p>Quality assessment for software engineering data.</p>
-          <a href="https://seedguard.github.io/SEEDInspector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <a href="SEEDInspector.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedaugment.png"></a>
           <h3><a href="#project-link">SEEDAugmentor</a></h3>
           <p>Augmenting software engineering data.</p>
-          <a href="https://seedguard.github.io/SEEDAugmentor"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <a href="SEEDAugmentor.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
       </div>
