--- a/SEEDProtector.html
+++ b/SEEDProtector.html
@@ -55,12 +55,12 @@
 
       <div class="row">
 
-        <div class="col-md-4 portfolio-item">
+        <!-- <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
           <h3><a href="#project-link">SEEDModeller</a></h3>
           <p>Understanding software engineering data security.</p>
           <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
-        </div>
+        </div> -->
 
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedqa.png"></a>
