--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
 
       <div class="row">
 
+        <h1>What is SEEDGuard.AI? Revolutionizing Trustworthy AI in Software Engineering!</h1>
+
+Imagine a world where Artificial Intelligence is as knowledgeable and skilled as the best software engineers. That's the future SEEDGuard.AI is building! This cutting-edge, open-source project, birthed from the collaborative efforts of North Carolina State University's internal team and global experts, is more than just a library—it's a beacon of hope for trustworthy AI in software engineering.
+<br>
+<br>
+At its core, SEEDGuard.AI understands a simple truth: The quality of an AI model is directly linked to the quality of its data. Just like developers thrive on excellent educational materials, AI models need top-notch data to excel. Currently, the AI for SE/Code domain is grappling with numerous data issues from various aspects. SEEDGuard.AI steps in as a game-changer, offering an arsenal of tools designed to elevate the quality of data for AI model researchers and developers.
+<br>
+<br>
+The beauty of SEEDGuard.AI lies in its community-driven approach. Developed by a talented team at North Carolina State University, it also harnesses the collective genius of external contributors—researchers and developers from academia and industry worldwide. This melting pot of knowledge ensures that SEEDGuard.AI is not just a tool, but a movement, pushing the boundaries of what's possible in AI for software engineering.
+<br>
+<br>
+And the best part? SEEDGuard.AI is open to everyone! Whether you're a seasoned expert or a curious newcomer, your contributions can shape the future of AI in software engineering. Join us on this thrilling journey and be part of a community that's redefining the landscape of trustworthy AI. Welcome to SEEDGuard.AI, where your ideas, expertise, and passion can make a real difference!
+<br>
+<br>
+<br>
+
+      </div>
+
+      <div class="row">
+
         <div class="col-md-4 portfolio-item">
           <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
           <h3><a href="#project-link">SEEDProtector</a></h3>
