--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="row">
 
-        <h2>What is SEEDGuard.AI? Revolutionizing Trustworthy AI in Software Engineering!</h2>
+        <h2>What is SEEDGuard.AI? Revolutionizing Trustworthy AI for Software Engineering!</h2>
 
 Imagine a world where Artificial Intelligence is as knowledgeable and skilled as the best software engineers. That's the future SEEDGuard.AI is building! This cutting-edge, open-source project, birthed from the collaborative efforts of North Carolina State University's internal team and global experts, is more than just a library—it's a beacon of hope for trustworthy AI in software engineering.
 <br>
