--- a/index.html
+++ b/index.html
@@ -79,24 +79,24 @@ And the best part? SEEDGuard.AI is open to everyone! Whether you're a seasoned e
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
-          <h3><a href="#project-link">SEEDProtector</a></h3>
+          <a href="SEEDProtector.html"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
+          <h3><a href="SEEDProtector.html">SEEDProtector</a></h3>
           <p>Attack and defense software engineering data.</p>
-          <a href="SEEDProtector.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <!-- <a href="SEEDProtector.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a> -->
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedqa.png"></a>
-          <h3><a href="#project-link">SEEDInspector</a></h3>
+          <a href="SEEDInspector.html"><img class="img-responsive" src="imgs/seedqa.png"></a>
+          <h3><a href="SEEDInspector.html">SEEDInspector</a></h3>
           <p>Quality assessment for software engineering data.</p>
-          <a href="SEEDInspector.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <!-- <a href="SEEDInspector.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a> -->
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedaugment.png"></a>
-          <h3><a href="#project-link">SEEDAugmentor</a></h3>
+          <a href="SEEDAugmentor.html"><img class="img-responsive" src="imgs/seedaugment.png"></a>
+          <h3><a href="SEEDAugmentor.html">SEEDAugmentor</a></h3>
           <p>Augmenting software engineering data.</p>
-          <a href="SEEDAugmentor.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <!-- <a href="SEEDAugmentor.html"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a> -->
         </div>
 
       </div>
