--- a/SEEDInspector.html
+++ b/SEEDInspector.html
@@ -58,24 +58,24 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
-          <h3><a href="#project-link">SEEDConsistencyChecker</a></h3>
+          <img class="img-responsive" src="imgs/SEEDConsistencyChecker.png">
+          <h3><a href="https://github.com/SEEDGuard/SEEDConsistencyChecker">SEEDConsistencyChecker</a></h3>
           <p>Detect inconsistent software engineering data.</p>
-          <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <a href="https://github.com/SEEDGuard/SEEDConsistencyChecker"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
-          <h3><a href="#project-link">SEEDLabelChecker</a></h3>
+          <img class="img-responsive" src="imgs/SEEDLabelChecker.png">
+          <h3><a href="https://github.com/SEEDGuard/SEEDLabelChecker">SEEDLabelChecker</a></h3>
           <p>Detect wrong labels in software engineering data.</p>
-          <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <a href="https://github.com/SEEDGuard/SEEDLabelChecker"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedqa.png"></a>
-          <h3><a href="#project-link">SEEDPrivacyChecker</a></h3>
+          <img class="img-responsive" src="imgs/SEEDPrivacyChecker.png">
+          <h3><a href="https://github.com/SEEDGuard/SEEDPrivacyChecker">SEEDPrivacyChecker</a></h3>
           <p>Audit privacy leakage in software engineering data.</p>
-          <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <a href="https://github.com/SEEDGuard/SEEDPrivacyChecker"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
       </div>
