--- a/SEEDProtector.html
+++ b/SEEDProtector.html
@@ -65,15 +65,15 @@
         </div> -->
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedpoisoner.png"></a>
-          <h3><a href="#project-link">SEEDPoisoner</a></h3>
+          <img class="img-responsive" src="imgs/seedpoisoner.png">
+          <h3><a href="https://github.com/SEEDGuard/SEEDPoisoner">SEEDPoisoner</a></h3>
           <p>Poisoning software engineering data.</p>
-          <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
+          <a href="https://github.com/SEEDGuard/SEEDPoisoner"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/SEEDAuditor.png"></a>
-          <h3><a href="#project-link">SEEDAuditor</a></h3>
+          <img class="img-responsive" src="imgs/SEEDAuditor.png">
+          <h3><a href="https://github.com/SEEDGuard/SEEDProtector">SEEDAuditor</a></h3>
           <p>Auditing software engineering data.</p>
           <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
