--- a/SEEDInspector.html
+++ b/SEEDInspector.html
@@ -35,11 +35,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
+            <li><a href="index.html">About</a></li>
             <li><a href="https://github.com/SEEDGuard/seedguard.github.io/blob/main/README.md">How to Contribute</a></li>
             <li><a href="">R&D Team</a></li>
             <li><a href="">Contributor List</a></li>
             <li><a href="https://join.slack.com/t/seedguard/signup">Join us (Slack)</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
