--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="imgs/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SEEDProtector</title>
+    <title>SEEDGuard.AI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -15,7 +16,7 @@
     <link href="css/3-col-portfolio.css" rel="stylesheet">
 
     <!-- customized CSS -->
-    <link href="css/seedprotector.css" rel="stylesheet">
+    <link href="css/seedguard.css" rel="stylesheet">
   </head>
 
   <body>
@@ -29,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">SEEDGuard.AI</a>
+          <a class="navbar-brand" href="">SEEDGuard.AI</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,53 +52,19 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">SEEDProtector <small>Secure Software Engineering Data Processing Library</small></h1>
+          <h1 class="page-header">SEEDGuard.AI <small>High-quality Data Provider for Trustworthy AI for SE</small></h1>
         </div>
 
       </div>
 
       <div class="row">
 
-        <!-- <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
-          <h3><a href="#project-link">SEEDModeller</a></h3>
-          <p>Understanding software engineering data security.</p>
-          <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
-        </div> -->
+        Dr. Bowen Xu<br>
+        Email: <a href = "mailto: bxu22@ncsu.edu">bxu22@ncsu.edu</a><br>
+        Department of Computer Science<br>
+        North Carolina State University<br>
 
-        <div class="col-md-4 portfolio-item">
-          <img class="img-responsive" src="imgs/seedpoisoner.png">
-          <h3><a href="https://github.com/SEEDGuard/SEEDPoisoner">SEEDPoisoner</a></h3>
-          <p>Poisoning software engineering data.</p>
-          <a href="https://github.com/SEEDGuard/SEEDPoisoner"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
-        </div>
 
-        <div class="col-md-4 portfolio-item">
-          <img class="img-responsive" src="imgs/SEEDAuditor.png">
-          <h3><a href="https://github.com/SEEDGuard/SEEDProtector">SEEDAuditor</a></h3>
-          <p>Auditing software engineering data.</p>
-          <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
-        </div>
-
-      </div>
-
-      <!-- <hr> -->
-
-      <!-- <div class="row text-center"> -->
-        
-        <!-- <div class="col-lg-12">
-          <ul class="pagination">
-            <li><a href="#">&laquo;</a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li><a href="#">&raquo;</a></li>
-          </ul>        
-        </div> -->
-
-      <!-- </div> -->
 
     </div><!-- /.container -->
 
