--- a/SEEDInspector.html
+++ b/SEEDInspector.html
@@ -51,7 +51,7 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">SEEDInspector <small>SQuality assessment for software engineering data.</small></h1>
+          <h1 class="page-header">SEEDInspector <small>Quality assessment for software engineering data.</small></h1>
         </div>
 
       </div>
