--- a/SEEDAugmentor.html
+++ b/SEEDAugmentor.html
@@ -59,21 +59,21 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedsecurity.png"></a>
+          <a href="#project-link"><img class="img-responsive" src="imgs/SEEDLinker.png"></a>
           <h3><a href="#project-link">SEEDLinker</a></h3>
-          <p>Link software engineering data from various sources to add context.</p>
+          <p>Link software engineering data from various sources.</p>
           <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedqa.png"></a>
+          <a href="#project-link"><img class="img-responsive" src="imgs/SEEDTimer.png"></a>
           <h3><a href="#project-link">SEEDTimer</a></h3>
-          <p>Timestamp software engineering data.</p>
+          <p>Version software engineering data.</p>
           <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="imgs/seedaugment.png"></a>
+          <a href="#project-link"><img class="img-responsive" src="imgs/SEEDSynthesizer.png"></a>
           <h3><a href="#project-link">SEEDSynthesizer</a></h3>
           <p>Synthesize software engineering data.</p>
           <a href="https://github.com/SEEDGuard/SEEDProtector"><img class="img-responsive" src="imgs/github-icon.png" width="15px">GitHub Repo</a>
