--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
       <div class="row">
 
+        <div class="col-md-10 portfolio-item">
+
         <h2>What is SEEDGuard.AI? Revolutionizing Trustworthy AI for Software Engineering!</h2>
 
 Imagine a world where Artificial Intelligence is as knowledgeable and skilled as the best software engineers. That's the future SEEDGuard.AI is building! This cutting-edge, open-source project, birthed from the collaborative efforts of North Carolina State University's internal team and global experts, is more than just a library—it's a beacon of hope for trustworthy AI in software engineering.
@@ -74,7 +76,7 @@ And the best part? SEEDGuard.AI is open to everyone! Whether you're a seasoned e
 <br>
 <br>
 <br>
-
+</div>
       </div>
 
       <div class="row">
