--- a/contact.html
+++ b/contact.html
@@ -58,11 +58,14 @@
       </div>
 
       <div class="row">
+        <div class="col-md-10 portfolio-item">
+
 
         Dr. Bowen Xu<br>
         Email: <a href = "mailto: bxu22@ncsu.edu">bxu22@ncsu.edu</a><br>
         Department of Computer Science<br>
         North Carolina State University<br>
+        </div>
 
 
 
